Some more code added for the incomplete new loader.